[project]
name = "persistent-conversation-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "William Phetsinorath", email = "william.phetsinorath@shikanime.studio"},
]
dependencies = [
    "streamlit>=1.31.1",
    "langchain>=0.1.8",
    "firebase-admin>=6.4.0",
    "langchain-google-vertexai>=0.0.5",
    "langchain-community>=0.0.21",
    "google-cloud-discoveryengine>=0.11.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
